if(BUILD_RL_MATH)
	add_subdirectory(rlDenavitHartenbergDemo)
	add_subdirectory(rlEulerAnglesDemo)
	add_subdirectory(rlFilterDemo)
	add_subdirectory(rlInterpolatorDemo)
	add_subdirectory(rlPcaDemo)
	add_subdirectory(rlQuaternionDemo)
	add_subdirectory(rlPolynomialRootsDemo)
	add_subdirectory(rlRotationConverterDemo)
	add_subdirectory(rlTrapezoidalVelocityDemo)
endif()

if(BUILD_RL_UTIL)
	add_subdirectory(rlThreadsDemo)
	add_subdirectory(rlTimerDemo)
endif()

if(BUILD_RL_XML)
	add_subdirectory(rlLoadXmlDemo)
endif()

if(BUILD_RL_KIN)
	add_subdirectory(rlJacobianDemo)
	add_subdirectory(rlPumaDemo)
endif()

if(BUILD_RL_MDL)
	add_subdirectory(rlDynamics1Demo)
	add_subdirectory(rlDynamics2Demo)
	add_subdirectory(rlInversePositionDemo)
endif()

if(BUILD_RL_HAL)
	add_subdirectory(rlAxisControllerDemo)
	add_subdirectory(rlCameraDemo)
	add_subdirectory(rlGripperDemo)
	add_subdirectory(rlLaserDemo)
	add_subdirectory(rlRangeSensorDemo)
	add_subdirectory(rlSixAxisForceTorqueSensorDemo)
	add_subdirectory(rlSocketDemo)
endif()

if(BUILD_RL_SG)
	add_subdirectory(rlCollisionDemo)
	add_subdirectory(rlViewDemo)
endif()

if(BUILD_RL_KIN AND BUILD_RL_SG)
	add_subdirectory(rlCoachKin)
endif()

if(BUILD_RL_MDL AND BUILD_RL_SG)
	add_subdirectory(rlCoachMdl)
	add_subdirectory(rlSimulator)
endif()

if(BUILD_RL_PLAN)
	add_subdirectory(rlPlanDemo)
	add_subdirectory(rlPrmDemo)
endif()

set(CPACK_NSIS_CREATE_ICONS_EXTRA ${CPACK_NSIS_CREATE_ICONS_EXTRA} PARENT_SCOPE)
set(CPACK_NSIS_DELETE_ICONS_EXTRA ${CPACK_NSIS_DELETE_ICONS_EXTRA} PARENT_SCOPE)
set(WIX_SHORTCUTS ${WIX_SHORTCUTS} PARENT_SCOPE)

if(UNIX)
	install(FILES ${rl_SOURCE_DIR}/robotics-library.svg DESTINATION ${CMAKE_INSTALL_DATADIR}/icons/hicolor/scalable/apps COMPONENT demos)
endif()
